# atari-autoencoder-predictor

./: .gitignore  Untitled.ipynb  dataset.py  echo.py  logrecord.py  main.py  publish_callback.py  pyproject.toml  schema.sql  sink.py  train.py  train_recurrent.py
models/: recurrent.py  vision_autoencoder.py  vision_input.py  vision_reconstructor.py
